<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>assessment</groupId>
  <artifactId>assessment</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <allure.version>2.6</allure.version>
     <source>1.8</source>
     <target>1.8</target>
    <aspectj.version>1.8.4</aspectj.version>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>
  <dependencies>
     <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.12</version>
    </dependency>
    
	    <dependency>
	    <groupId>info.cukes</groupId>
	    <artifactId>cucumber-picocontainer</artifactId>
	    <version>1.2.5</version>
	    <scope>test</scope>
	</dependency>
       <dependency>
        <groupId>net.lightbody.bmp</groupId>
        <artifactId>browsermob-core</artifactId>
        <version>2.1.5</version>
        <scope>test</scope>
 </dependency>
 
 <dependency>
	<groupId>com.google.guava</groupId>
	<artifactId>guava</artifactId>
	<version>23.0</version>
</dependency>
<dependency>
	<groupId>com.google.code.gson</groupId>
	<artifactId>gson</artifactId>
	<version>2.8.2</version>
</dependency>
    
    
     <dependency>
  <groupId>mysql</groupId>
    <artifactId>mysql-connector-java</artifactId>
    <version>8.0.16</version>
    </dependency> 
    
  <!--   <dependency>
    <groupId>mysql</groupId>
    <artifactId>mysql-connector-java</artifactId>
    <version>5.1.39</version>
</dependency> -->
 
 <!--<dependency>
    <groupId>info.cukes</groupId>
    <artifactId>cucumber-java</artifactId>
    <version>1.2.5</version>
 </dependency> -->
 
 <dependency>
    <groupId>com.opencsv</groupId>
    <artifactId>opencsv</artifactId>
    <version>4.4</version>
</dependency>
 
<dependency>
    <groupId>info.cukes</groupId>
    <artifactId>cucumber-picocontainer</artifactId>
    <version>1.2.4</version>
    <scope>test</scope>
</dependency>



    

<dependency>
    <groupId>org.apache.commons</groupId>
    <artifactId>commons-io</artifactId>
    <version>1.3.2</version>
</dependency>

<dependency>
    <groupId>org.json</groupId>
    <artifactId>json</artifactId>
    <version>20180813</version>
</dependency>

<dependency>
    <groupId>io.qameta.allure</groupId>
    <artifactId>allure-cucumber-jvm</artifactId>
    <version>2.9.0</version>
</dependency>

    
 <dependency>
    <groupId>info.cukes</groupId>
    <artifactId>cucumber-junit</artifactId>
    <version>1.2.5</version>
</dependency>

<dependency>
    <groupId>com.github.mkolisnyk</groupId>
    <artifactId>cucumber-runner</artifactId>
    <version>1.0.8</version>
</dependency>


<!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
<dependency>
    <groupId>io.rest-assured</groupId>
    <artifactId>rest-assured</artifactId>
    <version>3.2.0</version>
    <scope>test</scope>
</dependency>




<!--<dependency>
    <groupId>com.opencsv</groupId>
    <artifactId>opencsv</artifactId>
    <version>4.1</version>
</dependency>-->

<dependency>
            <groupId>ru.yandex.qatools.allure</groupId>
            <artifactId>allure-cucumber-jvm-adaptor</artifactId>
            <version>1.6.4</version>
</dependency>

<!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
<dependency>
    <groupId>org.seleniumhq.selenium</groupId>
    <artifactId>selenium-java</artifactId>
    <version>3.141.59</version>
</dependency>


<dependency>
    <groupId>com.assertthat</groupId>
    <artifactId>selenium-shutterbug</artifactId>
    <version>0.9.2</version>
</dependency>


<!--<dependency>
    <groupId>com.opencsv</groupId>
    <artifactId>opencsv</artifactId>
    <version>4.0</version>
</dependency> -->

<dependency>
    <groupId>au.com.bytecode</groupId>
    <artifactId>opencsv</artifactId>
    <version>2.4</version>
</dependency>


<dependency>
    <groupId>io.rest-assured</groupId>
    <artifactId>json-schema-validator</artifactId>
    <version>3.3.0</version>
</dependency>

	<dependency>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-clean-plugin</artifactId>
        <version>3.1.0</version>
    </dependency>
        </dependencies>
  <build>
    
    
   <pluginManagement>
        <plugins>
 <!--        <plugin>
	<groupId>com.github.temyers</groupId>
    <artifactId>cucumber-jvm-parallel-plugin</artifactId>
    <version>1.2.1</version>
    <executions>
        <execution>
            <id>generateRunners</id>
            <phase>validate</phase>
            <goals>
                <goal>generateRunners</goal>
            </goals>
            <configuration>
                <featuresDirectory>src/test/java/FeatureFiles</featuresDirectory>
                <cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
                <format>json,html</format>
            </configuration>
        </execution>
    </executions>
</plugin> -->


         <plugin>
			<groupId>com.github.temyers</groupId>
   			<artifactId>cucumber-jvm-parallel-plugin</artifactId>
			  	<version>5.0.0</version>
			  <executions>
			    <execution>
			      <id>generateRunners</id>
			      <phase>validate</phase>
			      <goals>
			        <goal>generateRunners</goal>
			      </goals>
			      <configuration>
			          <!-- Mandatory -->
			          <!-- comma separated list of package names to scan for glue code -->
			         <glue>com.assessment</glue>
			         <!-- These are the default values -->
			          <!-- Where to output the generated tests -->
			           <outputDirectory>${project.build.directory}/generated-test-sources/cucumber</outputDirectory>
			           <!-- The diectory, which must be in the root of the runtime classpath, containing your feature files.  -->
			          <featuresDirectory>src/test/java/FeatureFiles</featuresDirectory>
			           <!-- Directory where the cucumber report files shall be written  -->
			          <cucumberOutputDir>target/cucumber-parallel</cucumberOutputDir>
			          <!-- comma separated list of output formats -->
			         <format>json,html,rerun</format>
			         <!-- CucumberOptions.strict property -->
			         <strict>true</strict>
			         <!-- CucumberOptions.monochrome property -->
			         <monochrome>true</monochrome>
			         <!-- The tags to run, maps to CucumberOptions.tags property -->
			         <tags>"@complete"</tags>
			         <!-- If set to true, only feature files containing the required tags shall be generated. -->
			         <!-- Excluded tags (~@notMe) are ignored. -->
			         <filterFeaturesByTags>false</filterFeaturesByTags>
			         <!-- Generate TestNG runners instead of JUnit ones. --> 
			         <useTestNG>false</useTestNG>
			         <!-- The naming scheme to use for the generated test classes.  One of 'simple' or 'feature-title' --> 
			         <namingScheme>simple</namingScheme>
			         <!-- The class naming pattern to use.  Only required/used if naming scheme is 'pattern'.-->
			         <namingPattern>Parallel{c}IT</namingPattern>
			         <useJUnitReRun>true</useJUnitReRun>
			      	 <retryCount>2</retryCount>
			      	 
			      </configuration>
			    </execution>
			  </executions>
</plugin>
     
        
     <plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
					<fork>true</fork>
					<!--<executable>/usr/lib/jvm/jdk1.8.0_211/bin/javac</executable>-->
				</configuration>
		</plugin>
        
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.20</version>
            <configuration>
            		<parallel>classes</parallel>
					<forkMode>perthread</forkMode>
					<threadCount>2</threadCount>
					<perCoreThreadCount>false</perCoreThreadCount>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
					<tags></tags>
					<Includes>**/*RunnerTest.java</Includes>
                <argLine>
                    -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    -Dcucumber.options="--plugin io.qameta.allure.cucumberjvm.AllureCucumberJvm"
                </argLine>
            </configuration>
            <dependencies>
                <dependency>
                    <groupId>org.aspectj</groupId>
                    <artifactId>aspectjweaver</artifactId>
                    <version>${aspectj.version}</version>
                </dependency>
            </dependencies>
        </plugin>
        <plugin>
            <artifactId>maven-clean-plugin</artifactId>
            <version>3.1.0</version>
            <executions>
                <execution>
                    <id>clean-allure-results</id>
                    <phase>clean</phase>
                    <goals>
                        <goal>clean</goal>
                    </goals>
                    <configuration>
                        <filesets>
                            <fileset>
                                <directory>./allure-results</directory>
                            </fileset>
                        </filesets>
                    </configuration>
                </execution>
            </executions>
        </plugin>
            <!--Needed only to show reports locally. Run jetty:run and
            open localhost:8080 to show the report-->
   <!--         <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>9.2.10.v20150310</version>
                <configuration>
                    <webAppSourceDirectory>${project.build.directory}/site/allure-maven-plugin</webAppSourceDirectory>
                    <stopKey>stop</stopKey>
                    <stopPort>1234</stopPort>
                </configuration>
            </plugin> -->
        </plugins>
        </pluginManagement>
    
  </build>
</project>